[build-system]
requires = [
	"setuptools>=61.0",
	"sphinx",
	"sphinx-rtd-theme",
	"sphinxcontrib-jquery",
]
build-backend = "setuptools.build_meta"

[project]
name = "atmst"
version = "0.0.1"
authors = [
 	{ name="David Buchanan", email="d@vidbuchanan.co.uk" },
]
description = "A Python library for wrangling atproto-flavoured Merkle Search Trees"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
	"dag-cbor",
	"multiformats",
	"more-itertools",
]

[project.urls]
Homepage = "https://github.com/DavidBuchanan314/atmst"
Issues = "https://github.com/DavidBuchanan314/atmst/issues"
