[build-system]
requires = [
	"setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "atmst"
version = "0.0.3"
authors = [
 	{ name="David Buchanan", email="d@vidbuchanan.co.uk" },
]
description = "A Python library for wrangling atproto-flavoured Merkle Search Trees"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
	"cbrrr >= 1.0.0, < 2",
	"more-itertools",
	"lru-dict",
]

[project.optional-dependencies]
docs = [
	"sphinx",
	"sphinx-rtd-theme",
	"sphinxcontrib-jquery",
]

[project.urls]
Homepage = "https://github.com/DavidBuchanan314/atmst"
Issues = "https://github.com/DavidBuchanan314/atmst/issues"

[project.scripts]
cartool = "atmst.cartool:main"
